# fairspec-cardealer

./: CONTRIBUTING.md  package.json  pnpm-lock.yaml
.github/workflows/: general.yaml
python/: pyproject.toml
python/cardealerdp/: profile.py
python/fairspec_cardealer/models/: __init__.py  car.py  dataset.py  dealer.py  showroom.py
typescript/: package.json  profile.ts
typescript/models/: car.ts  dataset.ts  dealer.ts  index.ts  showroom.ts
typescript/schemas/: dealer.ts
website/: README.md  package.json  profile.json
website/content/docs/: index.mdx
website/content/docs/overview/: examples.md  format.md  software.md
website/content/docs/specification/: metadata.md
website/content/docs/specification/data/: car.md  dealer.md  showroom.md
website/profiles/: dataset.json
website/public/profiles/0.2.0/: dataset.json
website/public/profiles/0.2.1/: dataset.json
website/public/profiles/0.3.0/: dataset.json
website/public/profiles/0.4.0/: dataset.json
website/public/schemas/0.1.0/: showroom.json
website/public/schemas/0.2.0/: car.json
website/public/schemas/0.2.1/: car.json
website/public/schemas/0.3.0/: car.json  showroom.json
website/schemas/: car.json  dealer.json  showroom.json
