[project]
name = "fairspec-cardealer"
version = "0.4.0"
description = "Fairspec Cardealer is a data exchange format for car dealerships. It is developed on top of the Fairspec standard"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = ["pydantic>=2.12", "typing-extensions>=4.15"]
slug = "fairspec-cardealer"
title = "Fairspec Cardealer"

[[project.authors]]
name = "Evgeny Karev"

[project.urls]
homepage = "https://fairspec.github.io/fairspec-cardealer"
repository = "https://github.com/fairspec/fairspec-cardealer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

